fix the scrollbar

--- a/client/src/pages/home/styles.module.css
+++ b/client/src/pages/home/styles.module.css
@@ -2,21 +2,22 @@
 .messagesColumn {
   display: flex;
   margin: auto;
-  width: 85%;
-  height: 85vh;
+  width: 100%;
+  /* height: 85vh; */
   overflow: auto;
   padding: 10px 0;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
+  grid-row-end: 3;
 }
 
 .message {
   overflow-wrap: break-word;
   background: rgb(138, 128, 229);
   border-radius: 6px;
-  margin-bottom: 15px;
+  margin: 0px auto 15px 0px;
   max-width: 400px;
-  padding: 0px 12px;
+  padding: 1px 12px;
 }
 
 .messageReceived {
